--- a/Assignment2/code/airbnb_pred.Rmd
+++ b/Assignment2/code/airbnb_pred.Rmd
@@ -2,18 +2,9 @@
 title: "Airbnb Pricing in Shanghai / China"
 subtitle: "Data Analysis 3 - Assignment 2"
 author: "Ersan Kucukoglu"
-output: 
-  pdf_document :
-    keep_tex: true
-    number_sections: true
-header-includes:
- \usepackage{booktabs}
- \usepackage{longtable}
- \usepackage{array}
- \usepackage{multirow}
- \usepackage{wrapfig}
- \usepackage{float}
- \floatplacement{figure}{H}
+output:
+  html_document:
+    code_download: true
 ---
   
 ```{r setup, include=FALSE}
